javascript/ql/test/query-tests/NodeJS/InvalidExport/tst5.js
module.exports = exports;

exports = {}; // NOT OK, reassignment above should appear below
exports.a = 12;
